--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -94,43 +94,48 @@
             block1.addPoint(outputPoint1);
             block1.validate();
             var block2 = new dudeGraph.Block();
-            var inputPoint2 = new dudeGraph.Point(false, {
+            var inputPoint2_1 = new dudeGraph.Point(false, {
                 "pointName": "in",
                 "pointValueType": "Number"
             });
+            var inputPoint2_2 = new dudeGraph.Point(false, {
+                "pointName": "in2",
+                "pointValueType": "Object"
+            });
             graph.addBlock(block2);
-            block2.addPoint(inputPoint2);
+            block2.addPoint(inputPoint2_1);
+            block2.addPoint(inputPoint2_2);
             block2.validate();
-            outputPoint1.connect(inputPoint2);
+            // Test connect/disconnect
+            outputPoint1.connect(inputPoint2_1);
             expect(graph.graphConnections).to.have.length(1);
             expect(outputPoint1.pointConnections).to.have.length(1);
-            expect(inputPoint2.pointConnections).to.have.length(1);
+            expect(inputPoint2_1.pointConnections).to.have.length(1);
             expect(outputPoint1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
-            expect(inputPoint2.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
-            expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2.pointConnections[0]);
+            expect(inputPoint2_1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
+            expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2_1.pointConnections[0]);
             expect(function () {
-                outputPoint1.connect(inputPoint2);
+                outputPoint1.connect(inputPoint2_1);
             }).to.throw();
-            outputPoint1.disconnect(inputPoint2);
+            outputPoint1.disconnect(inputPoint2_1);
             expect(graph.graphConnections).to.have.length(0);
             expect(outputPoint1.pointConnections).to.have.length(0);
-            expect(inputPoint2.pointConnections).to.have.length(0);
-            // Test associativity point1.connect(point2) === point2.connect(point1)
-            inputPoint2.connect(outputPoint1);
+            expect(inputPoint2_1.pointConnections).to.have.length(0);
+            // Test associativity point1.(dis)connect(point2) === point2.(dis)connect(point1)
+            inputPoint2_1.connect(outputPoint1);
             expect(graph.graphConnections).to.have.length(1);
             expect(outputPoint1.pointConnections).to.have.length(1);
-            expect(inputPoint2.pointConnections).to.have.length(1);
+            expect(inputPoint2_1.pointConnections).to.have.length(1);
             expect(outputPoint1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
-            expect(inputPoint2.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
-            expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2.pointConnections[0]);
+            expect(inputPoint2_1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
+            expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2_1.pointConnections[0]);
             expect(function () {
-                inputPoint2.connect(outputPoint1);
+                inputPoint2_1.connect(outputPoint1);
             }).to.throw();
-            // Test associativity point1.disconnect(point2) === point2.disconnect(point1)
-            inputPoint2.disconnect(outputPoint1);
+            inputPoint2_1.disconnect(outputPoint1);
             expect(graph.graphConnections).to.have.length(0);
             expect(outputPoint1.pointConnections).to.have.length(0);
-            expect(inputPoint2.pointConnections).to.have.length(0);
+            expect(inputPoint2_1.pointConnections).to.have.length(0);
         });
         test("block points connect and singleConnection and disconnectAll", function () {
             var graph = new dudeGraph.Graph();
@@ -219,6 +224,44 @@
                     "pointValue": NaN
                 });
                 block.addPoint(badPoint);
+            }).to.throw();
+        });
+        test("mix point values and point connections", function () {
+            var graph = new dudeGraph.Graph();
+            var block1 = new dudeGraph.Block();
+            graph.addBlock(block1);
+            var outputPoint1 = new dudeGraph.Point(true, {
+                "pointName": "out",
+                "pointValueType": "Number",
+                "pointSingleConnection": false
+            });
+            block1.addPoint(outputPoint1);
+            var block2 = new dudeGraph.Block();
+            graph.addBlock(block2);
+            var inputPoint2_1 = new dudeGraph.Point(false, {
+                "pointName": "in",
+                "pointValueType": "Number"
+            });
+            var inputPoint2_2 = new dudeGraph.Point(false, {
+                "pointName": "in2",
+                "pointValueType": "Number",
+                "pointValue": 32,
+                "pointSingleConnection": false
+            });
+            var inputPoint2_3 = new dudeGraph.Point(false, {
+                "pointName": "in3",
+                "pointValueType": "Number",
+                "pointValue": 32
+            });
+            block2.addPoint(inputPoint2_1);
+            block2.addPoint(inputPoint2_2);
+            block2.addPoint(inputPoint2_3);
+            outputPoint1.connect(inputPoint2_1);
+            expect(function () {
+                outputPoint1.connect(inputPoint2_2); // cannot pointValue and pointConnections
+            }).to.throw();
+            expect(function () {
+                outputPoint1.connect(inputPoint2_3); // cannot pointValue and pointConnections, even if !pointSingleConnection
             }).to.throw();
         });
         /*
