--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -188,7 +188,6 @@
                 "pointName": "in",
                 "pointValueType": "Number"
             });
-            /*
             expect(function () {
                 outputPoint1.connect(inputPoint2); // The points are not bound to blocks
             }).to.throw();
@@ -197,7 +196,97 @@
                 outputPoint1.connect(inputPoint2); // inputPoint2 is not bound to a block
             }).to.throw();
             block2.addPoint(inputPoint2);
-            */
+            var connection = outputPoint1.connect(inputPoint2);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+            expect(graph.graphConnections[0]).to.be.equal(connection);
+            expect(outputPoint1.pointConnections[0]).to.be.equal(connection);
+            expect(inputPoint2.pointConnections[0]).to.be.equal(connection);
+            expect(connection.connectionOutputPoint).to.be.equal(outputPoint1);
+            expect(connection.connectionInputPoint).to.be.equal(inputPoint2);
+        });
+        test("disconnect points", function () {
+            var graph = new dudeGraph.Graph();
+            var block1 = new dudeGraph.Block();
+            var block2 = new dudeGraph.Block();
+            graph.addBlock(block1);
+            graph.addBlock(block2);
+            var outputPoint1 = new dudeGraph.Point(true, {
+                "pointName": "out",
+                "pointValueType": "Number"
+            });
+            var inputPoint2 = new dudeGraph.Point(false, {
+                "pointName": "in",
+                "pointValueType": "Number"
+            });
+            expect(function () {
+                outputPoint1.disconnect(inputPoint2); // The points are not bound to blocks
+            }).to.throw();
+            block1.addPoint(outputPoint1);
+            expect(function () {
+                outputPoint1.disconnect(inputPoint2); // inputPoint2 is not bound to a block
+            }).to.throw();
+            block2.addPoint(inputPoint2);
+            expect(function () {
+                outputPoint1.disconnect(inputPoint2); // Cannot disconnect non connected points
+            }).to.throw();
+            expect(function () {
+                inputPoint2.disconnect(outputPoint1); // Cannot disconnect non connected points
+            }).to.throw();
+            outputPoint1.connect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(1);
+            outputPoint1.disconnect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            expect(inputPoint2.pointConnections).to.have.length(0);
+        });
+        test("connect/disconnect commutativity", function () {
+            var graph = new dudeGraph.Graph();
+            var block1 = new dudeGraph.Block();
+            var block2 = new dudeGraph.Block();
+            graph.addBlock(block1);
+            graph.addBlock(block2);
+            var outputPoint1 = new dudeGraph.Point(true, {
+                "pointName": "out",
+                "pointValueType": "Number"
+            });
+            var inputPoint2 = new dudeGraph.Point(false, {
+                "pointName": "in",
+                "pointValueType": "Number"
+            });
+            block1.addPoint(outputPoint1);
+            block2.addPoint(inputPoint2);
+            outputPoint1.connect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(1);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+            expect(inputPoint2.pointConnections).to.have.length(1);
+            outputPoint1.disconnect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            expect(inputPoint2.pointConnections).to.have.length(0);
+            inputPoint2.connect(outputPoint1);
+            expect(graph.graphConnections).to.have.length(1);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+            expect(inputPoint2.pointConnections).to.have.length(1);
+            inputPoint2.disconnect(outputPoint1);
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            expect(inputPoint2.pointConnections).to.have.length(0);
+            outputPoint1.connect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(1);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+            expect(inputPoint2.pointConnections).to.have.length(1);
+            inputPoint2.disconnect(outputPoint1);
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            expect(inputPoint2.pointConnections).to.have.length(0);
+            inputPoint2.connect(outputPoint1);
+            expect(graph.graphConnections).to.have.length(1);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+            expect(inputPoint2.pointConnections).to.have.length(1);
+            outputPoint1.disconnect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            expect(inputPoint2.pointConnections).to.have.length(0);
         });
         /*
         test("create graph and an empty block", function () {
